--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fonoapi_dart
 description: A dart client for FonoAPI. FonoAPI is a small API which provides descriptions of Mobile Devices such as model, brand, processor, weight etc..
 
 
-version: 0.1.2+2
+version: 0.1.3
 repository: https://www.github.com/thinkdigitalsoftware/fonoapi-dart
 homepage: https://www.github.com/thinkdigitalsoftware/fonoapi-dart
 issue_tracker: https://github.com/thinkdigitalsoftware/fonoapi-dart/issues
@@ -12,7 +12,7 @@ environment:
 
 dependencies:
   http: ^0.12.0+2
-  meta: ^1.1.8
+  meta: any
 
 dev_dependencies:
   pedantic: ^1.8.0+1
